--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<meta charset="utf-8">
-
+		<title>CV</title>
 	</head>
 	<body>
 		<div id="header">
@@ -12,11 +12,11 @@
 		<div id="container">
 			<div id="left-box">
 				<p>Prête pour un nouveau départ</p>
-				<img src="ezrea.png" />
+				<img src="ezrea.png" alt="image de moi"/>
 				<p>Développeur Web Junior</p>
 				<p>06 26 18 79 66</p>
 				<p>messant.d@gmail.com</p>
-				<p>42 rue de Bel Air</br>41600 Chaumont sur Tharonne</p>
+				<p>42 rue de Bel Air<br/>41600 Chaumont sur Tharonne</p>
 			</div>
 			<div id="right-box">
 				<div id="experiences-box">
@@ -42,7 +42,6 @@
 		<div id="footer">
 			<p>Goût prononcé pour la découverte d'activité</p>
 		</div>
-	
 	</body>
 </html>
 	
